--- a/01. Partie législative/Article L150-16 - 6844150.md
+++ b/01. Partie législative/Article L150-16 - 6844150.md
@@ -3,6 +3,14 @@
 Les procès-verbaux constatant les infractions prévues au présent livre et aux décrets pris pour son application sont transmis
 sans délai au procureur de la République.
 
+Copie des procès-verbaux est adressée au directeur de région aéronautique.
+
+**Nota:**
+
+Ordonnance n° 2010-1307 du 28 octobre 2010 article 9 : L'abrogation des dispositions mentionnées à l'article 7 ne prendra
+effet qu'à compter de la publication des dispositions réglementaires du code des transports pour ce qui concerne à l'article
+L. 150-16, le dernier alinéa (Fin de vigueur : date indéterminée).
+
 **Liens relatifs à cet article**
 
 _Anciens textes_:
@@ -13,3 +21,15 @@ _Anciens textes_:
 _Codifié par_:
 
   - Décret n°67-333 1967-03-30
+
+_Nouveaux textes_:
+
+  - Code des transports - art. L6142-2 (V)
+
+_Modifié par_:
+
+  - Loi n°89-467 du 10 juillet 1989 - art. 11 () JORF 11 juillet 1989
+
+_Abrogé par_:
+
+  - Ordonnance n°2010-1307 du 28 octobre 2010 - art. 7
