--- a/02. Partie réglementaire - Décrets en Conseil d'Etat/Article R133-3 - 6844513.md
+++ b/02. Partie réglementaire - Décrets en Conseil d'Etat/Article R133-3 - 6844513.md
@@ -9,13 +9,17 @@ b) Les conditions du maintien de l'aptitude au vol et de son contrôle ;
 
 c) Les règles d'utilisation des aéronefs mentionnées à l'article R. 133-1 (1°, c) et du contrôle y afférent ;
 
-d) Les documents relatifs à la navigabilité et aux limitations de nuisances qui doivent être emportés à bord de l'aéronef.
+d) La liste et le contenu des documents de bord déterminés en fonction des types d'aéronefs et de la nature des vols.
 
 **Liens relatifs à cet article**
 
 _Codifié par_:
 
   - Décret n°67-334 1967-03-30
+
+_Modifié par_:
+
+  - Décret n°91-262 du 4 mars 1991 - art. 2 () JORF 9 mars 1991
 
 _Cité par_:
 
@@ -27,8 +31,3 @@ _Cite_:
 
   - Code de l'aviation civile - art. R133-1 (M)
   - Code de l'aviation civile - art. R133-2 (V)
-
-_Modifié par_:
-
-  - Décret n°73-256 1973-03-06 art. 1 JORF 10 mars 1973
-  - Décret n°84-459 1984-06-14 art. 2 JORF 17 juin 1984 en vigueur le 1er avril 1984
