--- a/02. Partie réglementaire - Décrets en Conseil d'Etat/Article R427-1 - 6845257.md
+++ b/02. Partie réglementaire - Décrets en Conseil d'Etat/Article R427-1 - 6845257.md
@@ -1,17 +1,14 @@
 # Article R427-1
 
-Par dérogation aux dispositions de l'article R. 261-3 du code du travail, sera puni d'une amende de 3 000 F à 6 000 F [*(1)*]
-tout employeur qui, en ce qui concerne le personnel navigant, aura contrevenu aux dispositions des articles L. 212-1 et R.
-212-1 à R. 212-11 de ce code.
+" Sera puni de l'amende prévue pour les contraventions de la 5e classe tout employeur qui, en ce qui concerne le personnel
+navigant, aura contrevenu aux dispositions de l'article L. 212-1 du code du travail et des décrets mentionnés à l'article L.
+212-2 du même code. Les contraventions donneront lieu à autant d'amendes qu'il y aura de navigants employés en méconnaissance
+des dispositions précitées."
 
 Toute infraction à la réglementation relative à la durée du travail du personnel navigant entraîne le retrait de la licence
 du contrevenant, qui est prononcé par le ministre chargé de l'aviation civile en ce qui concerne les catégories Transport
 aérien et Travail aérien, et par le ministre des armées en ce qui concerne le personnel de catégorie Essais et receptions,
 pour une durée qui ne pourra être inférieure à quinze jours ni supérieure à deux mois.
-
-**Nota:**
-
-[*(1) taux résultant du décret 89-989 1989-12-29*]
 
 **Liens relatifs à cet article**
 
@@ -26,9 +23,9 @@ _Codifié par_:
 
 _Modifié par_:
 
-  - Décret n°80-909 du 17 novembre 1980 - art. 7 () JORF 21 novembre 1980
-  - Décret n°89-989 du 29 décembre 1989 - art. 1 (V) JORF 31 décembre 1989 en vigueur le 1er janvier 1990
+  - Décret n°91-262 du 4 mars 1991 - art. 12 () JORF 9 mars 1991
 
 _Cite_:
 
-  - Code de l'aviation civile L212-1, R212-1, R212-11, R261-3
+  - Code du travail - art. L212-1 (M)
+  - Code du travail - art. L212-2 (M)
