--- a/02. Partie réglementaire - Décrets en Conseil d'Etat/Article R427-1 - 6845257.md
+++ b/02. Partie réglementaire - Décrets en Conseil d'Etat/Article R427-1 - 6845257.md
@@ -1,13 +1,13 @@
 # Article R427-1
 
-" Sera puni de l'amende prévue pour les contraventions de la 5e classe tout employeur qui, en ce qui concerne le personnel
-navigant, aura contrevenu aux dispositions de l'article L. 212-1 du code du travail et des décrets mentionnés à l'article L.
-212-2 du même code. Les contraventions donneront lieu à autant d'amendes qu'il y aura de navigants employés en méconnaissance
-des dispositions précitées."
+Sera puni de l'amende prévue par le 5° de l'article 131-13 du code pénal pour les contraventions de la cinquième classe tout
+employeur qui, en ce qui concerne le personnel navigant, aura contrevenu aux dispositions de l'article L. 212-1 du code du
+travail et des décrets mentionnés à l'article L. 212-2 du même code. Les contraventions donneront lieu à autant d'amendes
+qu'il y aura de navigants employés en méconnaissance des dispositions précitées. 
 
 Toute infraction à la réglementation relative à la durée du travail du personnel navigant entraîne le retrait de la licence
 du contrevenant, qui est prononcé par le ministre chargé de l'aviation civile en ce qui concerne les catégories Transport
-aérien et Travail aérien, et par le ministre des armées en ce qui concerne le personnel de catégorie Essais et receptions,
+aérien et Travail aérien et par le ministre des armées en ce qui concerne le personnel de catégorie Essais et receptions,
 pour une durée qui ne pourra être inférieure à quinze jours ni supérieure à deux mois.
 
 **Liens relatifs à cet article**
@@ -23,9 +23,10 @@ _Codifié par_:
 
 _Modifié par_:
 
-  - Décret n°91-262 du 4 mars 1991 - art. 12 () JORF 9 mars 1991
+  - Décret n°93-726 1993-03-29 art. 2 JORF 30 mars 1993 en vigueur le 1er mars 1994
 
 _Cite_:
 
+  - Code pénal - art. 131-13 (V)
   - Code du travail - art. L212-1 (M)
   - Code du travail - art. L212-2 (M)
