--- a/02. Partie réglementaire - Décrets en Conseil d'Etat/Article R252-6 - 6844866.md
+++ b/02. Partie réglementaire - Décrets en Conseil d'Etat/Article R252-6 - 6844866.md
@@ -1,7 +1,6 @@
 # Article R252-6
 
-Les membres du conseil d'administration sont nommés ou élus pour cinq ans. Ils ne peuvent exercer plus de trois mandats
-consécutifs.
+Les membres du conseil d'administration sont nommés ou élus pour cinq ans.
 
 Le nombre des membres du conseil d'administration qui ont dépassé l'âge de soixante-cinq ans ne peut être supérieur à six.
 Lorsque cette limite est dépassée, le membre le plus âgé est réputé démissionnaire d'office.
@@ -18,10 +17,14 @@ _Codifié par_:
 
   - Décret n°67-334 1967-03-30
 
-_Modifié par_:
-
-  - Décret n°84-353 1984-05-11 art. 4 JORF 12 mai 1984
-
 _Cite_:
 
   - Loi n°83-675 1983-07-26 art. 16
+
+_Modifié par_:
+
+  - Décret n°95-226 du 24 février 1995 - art. 1 () JORF 3 mars 1995
+
+_Abrogé par_:
+
+  - Décret n°2005-828 du 20 juillet 2005 - art. 4 () JORF 22 juillet 2005
