--- a/01. Partie législative/Article L121-3 - 6844054.md
+++ b/01. Partie législative/Article L121-3 - 6844054.md
@@ -1,17 +1,16 @@
 # Article L121-3
 
-Un aéronef ne peut être immatriculé en France que s'il appartient à une personne physique française ou à une personne morale,
-à condition que, dans ce cas, possèdent la nationalité française :
+Un aéronef ne peut être immatriculé en France que s'il appartient :
 
-Dans les sociétés de personnes, les associés en nom ou les commandités ;
+- à une personne physique française ou ressortissante d'un Etat membre de la Communauté européenne ou d'un autre Etat partie
+à l'accord sur l'Espace économique européen ;
 
-Dans les sociétés à responsabilité limitée, les propriétaires de la majorité des parts et les gérants ;
+- ou à une personne morale constituée en conformité avec la législation d'un Etat membre de la Communauté européenne ou d'un
+autre Etat partie à l'accord sur l'Espace économique européen, et ayant son siège statutaire ou son principal établissement
+sur le territoire de la République française ou d'un autre Etat membre de la Communauté européenne ou d'un autre Etat partie
+à l'accord sur l'Espace économique européen.
 
-Dans les sociétés anonymes, le président-directeur général et la majorité des membres du conseil d'administration ;
-
-Dans les associations, les dirigeants ou administrateurs et les trois quarts des membres.
-
-Des dérogations peuvent être accordées par le ministre chargé de l'aviation civile.
+Des dérogations peuvent être accordées à titre exceptionnel par l'autorité administrative.
 
 **Liens relatifs à cet article**
 
@@ -23,6 +22,14 @@ _Codifié par_:
 
   - Décret n°67-333 1967-03-30
 
+_Modifié par_:
+
+  - Loi n°96-151 du 26 février 1996 - art. 28 () JORF 27 février 1996
+
+_Abrogé par_:
+
+  - Ordonnance n°2010-1307 du 28 octobre 2010 - art. 7
+
 _Cité par_:
 
   - Code de l'aviation civile - art. D121-14 (V)
@@ -30,3 +37,7 @@ _Cité par_:
   - Code de l'aviation civile - art. D121-21 (V)
   - Code de l'aviation civile - art. D121-3 (V)
   - Code de l'aviation civile - art. D121-30 (V)
+
+_Nouveaux textes_:
+
+  - Code des transports - art. L6111-3 (V)
