--- a/01. Partie législative/Article L323-2 - 6844279.md
+++ b/01. Partie législative/Article L323-2 - 6844279.md
@@ -1,20 +1,27 @@
 # Article L323-2
 
-Toute entreprise frétant un aéronef, à titre professionnel ou contre rémunération, pour une opération de transport est
-soumise aux lois et règlements applicables au transport aérien public, quelle que soit l'utilisation faite par l'affréteur de
-cet aéronef.
+Toute entreprise frétant un aéronef, à titre onéreux, pour une opération de transport est soumise aux lois et règlements
+applicables au transport aérien public, quelle que soit l'utilisation faite par l'affréteur de cet aéronef.
 
 **Liens relatifs à cet article**
 
 _Codifié par_:
 
-  - Décret n°67-333 1967-03-30
-
-_Cité par_:
-
-  - Code de l'aviation civile - art. D121-18 (V)
-  - Loi n°96-151 du 26 février 1996 - art. 31 (VT)
+  - Décret n°67-333 du 30 mars 1967
 
 _Modifié par_:
 
-  - Loi n°82-1153 1982-12-30 art. 42 JORF 31 décembre 1982
+  - Loi n°96-151 du 26 février 1996 - art. 28 () JORF 27 février 1996
+
+_Cité par_:
+
+  - Loi n°96-151 du 26 février 1996 - art. 31 (VT)
+  - Code de l'aviation civile - art. D121-18 (V)
+
+_Abrogé par_:
+
+  - Ordonnance n°2010-1307 du 28 octobre 2010 - art. 7
+
+_Nouveaux textes_:
+
+  - Code des transports - art. L6412-6 (V)
