--- a/01. Partie législative/Article L323-1 - 6844276.md
+++ b/01. Partie législative/Article L323-1 - 6844276.md
@@ -1,7 +1,5 @@
 # Article L323-1
 
-La location d'un aéronef est l'opération par laquelle un bailleur met à la disposition d'un preneur un aéronef sans équipage.
-
 L'affrètement d'un aéronef est l'opération par laquelle un fréteur met à la disposition d'un affréteur un aéronef avec
 équipage. Sauf convention contraire, l'équipage reste sous la direction du fréteur.
 
@@ -11,10 +9,18 @@ _Codifié par_:
 
   - Décret n°67-333 1967-03-30
 
+_Modifié par_:
+
+  - Loi n°96-151 du 26 février 1996 - art. 28 () JORF 27 février 1996
+
+_Abrogé par_:
+
+  - Ordonnance n°2010-1307 du 28 octobre 2010 - art. 7
+
+_Nouveaux textes_:
+
+  - Code des transports - art. L6400-2 (V)
+
 _Cité par_:
 
   - Code de l'aviation civile - art. L227-4 (VT)
-
-_Modifié par_:
-
-  - Loi n°82-1153 1982-12-30 art. 42 JORF 31 décembre 1982
