--- a/03. Partie réglementaire - Décrets simples/Article D435-2 - 6843988.md
+++ b/03. Partie réglementaire - Décrets simples/Article D435-2 - 6843988.md
@@ -1,12 +1,17 @@
 # Article D435-2
 
-Les sanctions disciplinaires qui peuvent être prononcées à l'encontre des navigants non professionnels sont :
+Les sanctions disciplinaires qui peuvent être prononcées à l'encontre des personnels navigants non professionnels sont :
 
-L'avertissement ;
+- l'avertissement ;
 
-Le retrait temporaire, avec ou sans sursis, des licences ou qualifications ou des cartes de stagiaires ;
+- la suspension du privilège d'effectuer des vols en qualité de commandant de bord tant qu'un complément de formation
+pratique ou/et théorique, dans les conditions spécifiées par la décision de sanction, n'a pas été réalisé ;
 
-Le retrait définitif des mêmes titres.
+- la suspension des licences ou qualifications, assortie ou non d'un sursis ou/et d'une obligation d'un complément de
+formation pratique ou/et théorique, dans les conditions spécifiées par la décision de sanction ;
+
+- l'annulation des licences ou qualifications avec interdiction d'en solliciter la délivrance à titre définitif ou pendant
+une durée déterminée par la décision de sanction.
 
 **Liens relatifs à cet article**
 
@@ -14,10 +19,14 @@ _Codifié par_:
 
   - Décret n°67-335 1967-03-30
 
+**Liens**:
+
+  - SPEC_APPLI: Décret n°98-264 du 2 avril 1998 - art. 10 (V)
+
+_Modifié par_:
+
+  - Décret n°98-264 du 2 avril 1998 - art. 2 () JORF 7 avril 1998
+
 _Cité par_:
 
   - Code de l'aviation civile - art. D435-6 (Ab)
-
-_Créé par_:
-
-  - Décret n°77-1140 1977-10-05 art. 1er. JORF 12 octobre 1977
