--- a/02. Partie réglementaire - Décrets en Conseil d'Etat/Article R341-1 - 6845053.md
+++ b/02. Partie réglementaire - Décrets en Conseil d'Etat/Article R341-1 - 6845053.md
@@ -11,9 +11,13 @@ _Codifié par_:
 
   - Décret n°67-334 1967-03-30
 
-_Créé par_:
+_Modifié par_:
 
-  - Décret n°82-381 1982-05-06 art. 2 JORF 8 mai 1982
+  - Loi n°98-546 1998-07-02 art. 51 JORF 3 juillet 1998
+
+_Abrogé par_:
+
+  - Décret n°2001-534 du 21 juin 2001 - art. 5 (V) JORF 22 juin 2001
 
 _Cité par_:
 
