--- a/02. Partie réglementaire - Décrets en Conseil d'Etat/Article R342-13 - 6845090.md
+++ b/02. Partie réglementaire - Décrets en Conseil d'Etat/Article R342-13 - 6845090.md
@@ -26,7 +26,7 @@ _Codifié par_:
 
 _Modifié par_:
 
-  - Décret n°93-421 du 17 mars 1993 - art. 7 () JORF 24 mars 1993
+  - Loi n°98-546 1998-07-02 art. 51 JORF 3 juillet 1998
 
 _Cité par_:
 
