--- a/02. Partie réglementaire - Décrets en Conseil d'Etat/Article R342-9 - 6845081.md
+++ b/02. Partie réglementaire - Décrets en Conseil d'Etat/Article R342-9 - 6845081.md
@@ -3,9 +3,9 @@
 Les cahiers des charges annexés aux contrats relatifs à l'exploitation de services réguliers de transport aérien doivent
 prévoir les types d'appareils utilisés ainsi que la fréquence minimum et maximum des services.
 
-Ils comportent l'obligation pour la compagnie de respecter dans l'exploitation les lois et règlements concernant la
-navigation aérienne, à l'exclusion de toute obligation autre que celles qui sont imposées aux entreprises françaises ou
-étrangères de transport aérien.
+Ils comportent l'obligation pour la société de respecter dans l'exploitation les lois et règlements concernant la navigation
+aérienne, à l'exclusion de toute obligation autre que celles qui sont imposées aux entreprises françaises ou étrangères de
+transport aérien.
 
 **Liens relatifs à cet article**
 
@@ -16,6 +16,14 @@ _Anciens textes_:
 _Codifié par_:
 
   - Décret n°67-334 1967-03-30
+
+_Modifié par_:
+
+  - Loi n°98-546 1998-07-02 art. 51 JORF 3 juillet 1998
+
+_Abrogé par_:
+
+  - Décret n°2001-534 du 21 juin 2001 - art. 5 (V) JORF 22 juin 2001
 
 _Cité par_:
 
