--- a/03. Partie réglementaire - Décrets simples/Article D611-3 - 6844033.md
+++ b/03. Partie réglementaire - Décrets simples/Article D611-3 - 6844033.md
@@ -1,19 +1,11 @@
 # Article D611-3
 
-Pour les entreprises mentionnées au a de l'article D. 611-2, les cotisations sont exigibles le 1er avril de chaque année.
+Pour les entreprises mentionnées au a de l'article D. 611-2, les cotisations sont exigibles le 1er avril de chaque année. 
 
-Toutefois, la compagnie nationale Air France peut être appelée à verser au début de chaque année un acompte basé sur l'état
-de sa flotte au 1er octobre de l'année précédant l'année en cours.
+Toutefois, la société Air France peut être appelée à verser au début de chaque année un acompte basé sur l'état de sa flotte
+au 1er octobre de l'année précédant l'année en cours.
 
 **Liens relatifs à cet article**
-
-_Cite_:
-
-  - Code de l'aviation civile - art. L611-2 (M)
-
-_Modifié par_:
-
-  - Décret  80-910 1980-11-17 art. 4 JORF 21 novembre 1980
 
 _Anciens textes_:
 
@@ -22,3 +14,11 @@ _Anciens textes_:
 _Codifié par_:
 
   - Décret n°67-335 1967-03-30
+
+_Modifié par_:
+
+  - Loi n°98-546 1998-07-02 art. 51 JORF 3 juillet 1998
+
+_Cite_:
+
+  - Code de l'aviation civile - art. D611-2 (V)
