--- a/02. Partie réglementaire - Décrets en Conseil d'Etat/Article R133-1-3 - 6844509.md
+++ b/02. Partie réglementaire - Décrets en Conseil d'Etat/Article R133-1-3 - 6844509.md
@@ -1,6 +1,6 @@
 # Article R133-1-3
 
-Les entreprises détenant un certificat d'agrément, ou sollicitant un tel certificat, en application de l'article L. 133-1-1,
+Les entreprises détenant un certificat d'agrément, ou sollicitant un tel certificat, en application de l'article R. 133-1-1,
 font l'objet d'un contrôle de l'Etat portant sur l'application des dispositions fixées par les conventions internationales,
 les lois et les règlements en vigueur dans les domaines prévus aux articles R. 133-1, R. 133-1-1 et R. 133-2.
 
@@ -13,19 +13,22 @@ _Codifié par_:
 
   - Décret n°67-334 1967-03-30
 
-_Créé par_:
-
-  - Décret n°95-444 du 21 avril 1995 - art. 1 () JORF 25 avril 1995
-
 _Cité par_:
 
   - Décret n°97-1198 du 19 décembre 1997 - art. Annexe (M)
   - Code de l'aviation civile - art. R330-12 (M)
   - Code de l'aviation civile - art. R330-13 (V)
 
+_Modifié par_:
+
+  - Décret n°99-74 du 2 février 1999 - art. 2 () JORF 5 février 1999
+
+_Abrogé par_:
+
+  - Décret n°2006-1544 du 7 décembre 2006 - art. 4 () JORF 8 décembre 2006
+
 _Cite_:
 
   - Code de l'aviation civile - art. R133-1 (M)
   - Code de l'aviation civile - art. R133-1-1 (M)
   - Code de l'aviation civile - art. R133-2 (V)
-  - Code de l'aviation civile L133-1-1, R133-1, R133-1-1, R133-2
