--- a/01. Partie législative/Article L611-2 - 6844401.md
+++ b/01. Partie législative/Article L611-2 - 6844401.md
@@ -3,6 +3,12 @@
 Donne lieu à rétablissement de crédit : le produit des ventes et abonnements des publications éditées par la section des
 instructions aéronautiques de l'aviation civile.
 
+**Nota:**
+
+Ordonnance n° 2010-1307 du 28 octobre 2010 article 9 : L'abrogation des dispositions mentionnées à l'article 7 ne prendra
+effet qu'à compter de la publication des dispositions réglementaires du code des transports pour ce qui concerne l'article L.
+611-2 (Fin de vigueur : date indéterminée).
+
 **Liens relatifs à cet article**
 
 _Anciens textes_:
@@ -13,6 +19,18 @@ _Anciens textes_:
 _Codifié par_:
 
   - Décret n°67-333 1967-03-30
+
+_Modifié par_:
+
+  - Loi n°99-243 du 29 mars 1999 - art. 1 () JORF 30 mars 1999
+
+**Liens**:
+
+  - SPEC_APPLI: Loi n°99-243 du 29 mars 1999 - art. 2 (M)
+
+_Abrogé par_:
+
+  - Ordonnance n°2010-1307 du 28 octobre 2010 - art. 7
 
 _Cité par_:
 
