--- a/01. Partie législative/Article L611-3 - 6844403.md
+++ b/01. Partie législative/Article L611-3 - 6844403.md
@@ -19,3 +19,15 @@ _Anciens textes_:
 _Codifié par_:
 
   - Décret n°67-333 1967-03-30
+
+_Modifié par_:
+
+  - Loi n°99-243 du 29 mars 1999 - art. 1 () JORF 30 mars 1999
+
+**Liens**:
+
+  - SPEC_APPLI: Loi n°99-243 du 29 mars 1999 - art. 2 (M)
+
+_Abrogé par_:
+
+  - Ordonnance n°2010-1307 du 28 octobre 2010 - art. 7
