--- a/02. Partie réglementaire - Décrets en Conseil d'Etat/Article R252-19 - 6844890.md
+++ b/02. Partie réglementaire - Décrets en Conseil d'Etat/Article R252-19 - 6844890.md
@@ -9,6 +9,9 @@ concerne les affaires intéressant directement l'exploitation de l'aéroport. To
 directeur général et un chef de service dépendant d'un autre département ministériel que celui de l'équipement il en est
 référé au ministre intéressé par ce fonctionnaire et au ministre chargé de l'aviation civile, par le directeur général.
 
+Pour l'exercice de ses fonctions telles que définies au présent article, le directeur général peut déléguer sa signature aux
+fonctionnaires de l'Etat qui lui sont subordonnés.
+
 **Liens relatifs à cet article**
 
 _Anciens textes_:
@@ -18,6 +21,10 @@ _Anciens textes_:
 _Codifié par_:
 
   - Décret n°67-334 1967-03-30
+
+_Modifié par_:
+
+  - Décret n°99-408 du 21 mai 1999 - art. 5 () JORF 26 mai 1999
 
 _Cité par_:
 
