--- a/03. Partie réglementaire - Décrets simples/Article D251-2 - 6843863.md
+++ b/03. Partie réglementaire - Décrets simples/Article D251-2 - 6843863.md
@@ -13,3 +13,11 @@ _Anciens textes_:
 _Codifié par_:
 
   - Décret n°67-335 1967-03-30
+
+_Abrogé par_:
+
+  - Décret n°2005-854 du 27 juillet 2005 - art. 1 () JORF 28 juillet 2005
+
+_Modifié par_:
+
+  - Loi n°99-409 1999-05-21 art. 2 JORF 26 mai 1999
