--- a/01. Partie législative/Article L324-1 - 6844281.md
+++ b/01. Partie législative/Article L324-1 - 6844281.md
@@ -1,6 +1,6 @@
 # Article L324-1
 
-Est puni d'une amende de 100 000 F le fait pour tout transporteur aérien, ou tout prestataire de services de transport
+Est puni d'une amende de 15 000 euros le fait pour tout transporteur aérien, ou tout prestataire de services de transport
 aérien, y compris les auxiliaires de transport, de ne pas s'être conformé à une décision administrative visant à interdire de
 nouvelles baisses des tarifs des services aériens intracommunautaires, prise en application de l'article 6 du règlement (CEE)
 n° 2409/92 du Conseil du 23 juillet 1992 sur les tarifs des passagers et de fret des services aériens.
@@ -29,15 +29,24 @@ _Codifié par_:
 
 _Cite_:
 
-  - Ordonnance 86-1243 1986-12-01 art. 45, art. 46, art. 47, art. 51, art. 52
-  - Ordonnance n°86-1243 du 1 décembre 1986 - art. 46 (Ab)
-  - Ordonnance n°86-1243 du 1 décembre 1986 - art. 47 (Ab)
-  - Ordonnance n°86-1243 du 1 décembre 1986 - art. 51 (Ab)
-  - Ordonnance n°86-1243 du 1 décembre 1986 - art. 52 (M)
-  - Code pénal - art. 121-2 (M)
-  - Code pénal - art. 131-38 (M)
+  - Ordonnance n°86-1243 du 1 décembre 1986
+  - Ordonnance n°86-1243 du 1 décembre 1986 - art. 46
+  - Ordonnance n°86-1243 du 1 décembre 1986 - art. 47
+  - Ordonnance n°86-1243 du 1 décembre 1986 - art. 51
+  - Ordonnance n°86-1243 du 1 décembre 1986 - art. 52
+  - Code pénal - art. 121-2
+  - Code pénal - art. 131-38
   - Règlement CEE 92-2409 1992-07-23
 
-_Créé par_:
+_Modifié par_:
 
-  - Loi n°2001-43 du 16 janvier 2001 - art. 19 () JORF 17 janvier 2001
+  - Ordonnance n°2000-916 du 19 septembre 2000 - art. 3 (V) JORF 22 septembre 2000 en vigueur le 1er janvier 2002
+
+_Abrogé par_:
+
+  - Loi n°2009-526 du 12 mai 2009 - art. 125
+
+**Liens**:
+
+  - TXT_SOURCE: Règlement CE 1103/97 1997-06-17
+  - TXT_SOURCE: Règlement CE 974/98 1998-05-03
