--- a/01. Partie législative/Article L150-1-1 - 6844113.md
+++ b/01. Partie législative/Article L150-1-1 - 6844113.md
@@ -2,19 +2,32 @@
 
 Le fait d'exploiter un aéronef pour une ou plusieurs opérations de transport aérien public, en l'absence du certificat de
 transporteur aérien exigé en application de l'article L. 330-1, en cours de validité à la date du transport, ou dans des
-conditions non conformes à celles fixées par ledit certificat, est puni d'un an d'emprisonnement et de 500 000 F d'amende.
+conditions non conformes à celles fixées par ledit certificat, est puni d'un an d'emprisonnement et de 75 000 euros d'amende.
 
 **Liens relatifs à cet article**
-
-_Créé par_:
-
-  - Loi n°96-151 du 26 février 1996 - art. 28 () JORF 27 février 1996
 
 _Cité par_:
 
   - Loi n°96-151 du 26 février 1996 - art. 31 (VT)
 
+_Modifié par_:
+
+  - Ordonnance n°2000-916 du 19 septembre 2000 - art. 3 (V) JORF 22 septembre 2000 en vigueur le 1er janvier 2002
+
+_Abrogé par_:
+
+  - Ordonnance n°2010-1307 du 28 octobre 2010 - art. 7
+
+_Nouveaux textes_:
+
+  - Code des transports - art. L6232-6 (V)
+
 _Cite_:
 
-  - Code de l'aviation civile - art. L330-1 (M)
-  - Réglement CEE 2409-92 1992-07-23
+  - Code de l'aviation civile - art. L330-1
+  - Réglement CEE 2409/92 1992-07-23
+
+**Liens**:
+
+  - TXT_SOURCE: Règlement CE 1103/97 1997-06-17
+  - TXT_SOURCE: Règlement CE 974/98 1998-05-03
