--- a/01. Partie législative/Article L150-5 - 6844125.md
+++ b/01. Partie législative/Article L150-5 - 6844125.md
@@ -2,7 +2,7 @@
 
 Le possesseur, le détenteur ou le pilote qui aura apposé ou fait apposer sur l'aéronef des marques d'immatriculation non
 conformes à celles du certificat de d'immatriculation ou qui aura supprimé ou fait supprimer, rendu ou fait rendre illisibles
-les marques exactement apposées sera puni d'une amende de 120 000 F et d'un emprisonnement de trois ans. Seront punis des
+les marques exactement apposées sera puni d'une amende de 18 000 euros et d'un emprisonnement de trois ans. Seront punis des
 mêmes peines, ceux qui auront apposé ou fait apposer sur un aéronef privé les marques distinctives réservées aux aéronefs
 publics ou qui auraient fait usage d'un aéronef privé portant lesdites marques.
 
@@ -15,7 +15,19 @@ _Anciens textes_:
 
 _Codifié par_:
 
-  - Décret n°67-333 1967-03-30
+  - Décret n°67-333 du 30 mars 1967
+
+_Modifié par_:
+
+  - Ordonnance n°2000-916 du 19 septembre 2000 - art. 3 (V) JORF 22 septembre 2000 en vigueur le 1er janvier 2002
+
+_Abrogé par_:
+
+  - Ordonnance n°2010-1307 du 28 octobre 2010 - art. 7
+
+_Nouveaux textes_:
+
+  - Code des transports - art. L6142-6 (V)
 
 _Cité par_:
 
@@ -23,8 +35,5 @@ _Cité par_:
 
 **Liens**:
 
-  - SPEC_APPLI: Loi n°92-1336 1992-12-16 art. 373
-
-_Modifié par_:
-
-  - Loi n°92-1336 du 16 décembre 1992 - art. 322 (V) JORF 23 décembre 1992 en vigueur le 1er mars 1994
+  - TXT_SOURCE: Règlement CE 1103/97 1997-06-17
+  - TXT_SOURCE: Règlement CE 974/98 1998-05-03
