--- a/02. Partie réglementaire - Décrets en Conseil d'Etat/Article R133-3 - 6844513.md
+++ b/02. Partie réglementaire - Décrets en Conseil d'Etat/Article R133-3 - 6844513.md
@@ -1,15 +1,18 @@
 # Article R133-3
 
-Des arrêtés du ministre chargé de l'aviation civile fixent :
+Des arrêtés du ministre chargé de l'aviation civile fixent : 
 
 a) Les conditions de délivrance et de maintien en état de validité des certificats et laissez-passer mentionnés aux articles
-R. 133-1 et R. 133-2 ;
+R. 133-1 et R. 133-2 ; 
 
-b) Les conditions du maintien de l'aptitude au vol et de son contrôle ;
+b) Les conditions du maintien de l'aptitude au vol et de son contrôle ; 
 
-c) Les règles d'utilisation des aéronefs mentionnées à l'article R. 133-1 (1°, c) et du contrôle y afférent ;
+c) Les règles d'utilisation des aéronefs mentionnées à l'article R. 133-1 (1°, c) et du contrôle y afférent ; 
 
-d) La liste et le contenu des documents de bord déterminés en fonction des types d'aéronefs et de la nature des vols.
+d) La liste et le contenu des documents de bord déterminés en fonction des types d'aéronefs et de la nature des vols. 
+
+e) Les conditions dans lesquelles l'utilisation des aéronefs relevant de certaines catégories acoustiques peut être limitée
+ou interdite sur le territoire français ou une partie de celui-ci.
 
 **Liens relatifs à cet article**
 
@@ -19,7 +22,7 @@ _Codifié par_:
 
 _Modifié par_:
 
-  - Décret n°91-262 du 4 mars 1991 - art. 2 () JORF 9 mars 1991
+  - Décret n°2003-230 du 13 mars 2003 - art. 3 () JORF 16 mars 2003
 
 _Cité par_:
 
@@ -29,5 +32,5 @@ _Cité par_:
 
 _Cite_:
 
-  - Code de l'aviation civile - art. R133-1 (M)
+  - Code de l'aviation civile - art. R133-1 (V)
   - Code de l'aviation civile - art. R133-2 (V)
