--- a/02. Partie réglementaire - Décrets en Conseil d'Etat/Article R330-12-1 - 6845016.md
+++ b/02. Partie réglementaire - Décrets en Conseil d'Etat/Article R330-12-1 - 6845016.md
@@ -10,9 +10,9 @@ _Codifié par_:
 
   - Décret n°67-334 1967-03-30
 
-_Créé par_:
+_Modifié par_:
 
-  - Décret n°94-600 du 12 juillet 1994 - art. 1 () JORF 20 juillet 1994
+  - Décret n°2003-230 du 13 mars 2003 - art. 7 (V) JORF 16 mars 2003
 
 _Cité par_:
 
