--- a/02. Partie réglementaire - Décrets en Conseil d'Etat/Article R330-17 - 6845050.md
+++ b/02. Partie réglementaire - Décrets en Conseil d'Etat/Article R330-17 - 6845050.md
@@ -12,10 +12,9 @@ _Codifié par_:
 
 _Modifié par_:
 
-  - Décret n°93-726 1993-03-29 art. 2 JORF 30 mars 1993 en vigueur le 1er mars 1994
+  - Décret n°2003-230 du 13 mars 2003 - art. 7 (V) JORF 16 mars 2003
 
 _Cite_:
 
-  - Code pénal - art. 131-13 (M)
-  - Code de l'aviation civile - art. R330-15 (M)
-  - Code de l'aviation civile - art. R330-16 (Ab)
+  - Code pénal - art. 131-13 (V)
+  - Code de l'aviation civile - art. R330-15 (V)
