--- a/02. Partie réglementaire - Décrets en Conseil d'Etat/Article R330-21 - 6845030.md
+++ b/02. Partie réglementaire - Décrets en Conseil d'Etat/Article R330-21 - 6845030.md
@@ -12,13 +12,9 @@ _Codifié par_:
 
   - Décret n°67-334 1967-03-30
 
-**Liens**:
+_Modifié par_:
 
-  - SPEC_APPLI: Décret n°99-475 1999-06-04 art. 5 *champ d'application*
-
-_Créé par_:
-
-  - Décret n°99-475 du 4 juin 1999 - art. 4 () JORF 9 juin 1999
+  - Décret n°2003-230 du 13 mars 2003 - art. 7 (V) JORF 16 mars 2003
 
 _Cite_:
 
