--- a/02. Partie réglementaire - Décrets en Conseil d'Etat/Article R330-3 - 6844995.md
+++ b/02. Partie réglementaire - Décrets en Conseil d'Etat/Article R330-3 - 6844995.md
@@ -1,7 +1,9 @@
 # Article R330-3
 
-Les entreprises autorisées doivent fournir périodiquement, dans des conditions fixées par arrêté ministériel, des
-renseignements statistiques sur le trafic.
+Les transporteurs aériens titulaires d'une licence d'exploitation délivrée par la France et les autres transporteurs aériens
+exerçant une activité de transport aérien public sur le territoire français fournissent au ministre chargé de l'aviation
+civile ou à toute personne désignée par lui des renseignements statistiques sur leur trafic selon des modalités fixées par
+arrêté du ministre chargé de l'aviation civile.
 
 **Liens relatifs à cet article**
 
@@ -12,6 +14,11 @@ _Anciens textes_:
 _Codifié par_:
 
   - Décret n°67-334 1967-03-30
+
+_Modifié par_:
+
+  - Décret n°2003-230 du 13 mars 2003 - art. 4 () JORF 16 mars 2003
+  - Décret n°2003-230 du 13 mars 2003 - art. 7 (V) JORF 16 mars 2003
 
 _Cité par_:
 
