--- a/02. Partie réglementaire - Décrets en Conseil d'Etat/Article R330-20 - 6845026.md
+++ b/02. Partie réglementaire - Décrets en Conseil d'Etat/Article R330-20 - 6845026.md
@@ -38,13 +38,9 @@ _Cité par_:
   - Code du tourisme. - art. R211-14-2 (T)
   - Code du tourisme. - art. R211-19 (V)
 
-**Liens**:
+_Modifié par_:
 
-  - SPEC_APPLI: Décret n°99-475 1999-06-04 art. 5 *champ d'application*
-
-_Créé par_:
-
-  - Décret n°99-475 du 4 juin 1999 - art. 4 () JORF 9 juin 1999
+  - Décret n°2003-230 du 13 mars 2003 - art. 7 (V) JORF 16 mars 2003
 
 _Cite_:
 
