--- a/02. Partie réglementaire - Décrets en Conseil d'Etat/Article R330-22 - 6845034.md
+++ b/02. Partie réglementaire - Décrets en Conseil d'Etat/Article R330-22 - 6845034.md
@@ -16,16 +16,15 @@ _Cité par_:
 
   - Décret n°97-1198 du 19 décembre 1997 - art. Annexe (VT)
 
-**Liens**:
-
-  - SPEC_APPLI: Décret n°99-475 1999-06-04 art. 5 *champ d'application*
-  - TXT_SOURCE: Règlement CE 1103/97 1997-06-17
-  - TXT_SOURCE: Règlement CE 974/98 1998-05-03
-
 _Modifié par_:
 
-  - Ordonnance n°2000-916 du 19 septembre 2000 - art. 3 (V) JORF 22 septembre 2000 en vigueur le 1er janvier 2002
+  - Décret n°2003-230 du 13 mars 2003 - art. 7 (V) JORF 16 mars 2003
 
 _Cite_:
 
   - Code de l'aviation civile - art. R330-20 (M)
+
+**Liens**:
+
+  - TXT_SOURCE: Règlement CE 1103/97 1997-06-17
+  - TXT_SOURCE: Règlement CE 974/98 1998-05-03
