--- a/02. Partie réglementaire - Décrets en Conseil d'Etat/Article R330-1-2 - 6844993.md
+++ b/02. Partie réglementaire - Décrets en Conseil d'Etat/Article R330-1-2 - 6844993.md
@@ -12,10 +12,10 @@ _Codifié par_:
 
   - Décret n°67-334 1967-03-30
 
-_Créé par_:
-
-  - Décret n°94-600 du 12 juillet 1994 - art. 1 () JORF 20 juillet 1994
-
 _Cité par_:
 
   - Décret n°97-1198 du 19 décembre 1997 - art. Annexe (VT)
+
+_Modifié par_:
+
+  - Décret n°2003-230 du 13 mars 2003 - art. 7 (V) JORF 16 mars 2003
