--- a/01. Partie législative/Article L360-1 - 6844326.md
+++ b/01. Partie législative/Article L360-1 - 6844326.md
@@ -1,17 +1,21 @@
 # Article L360-1
 
+Les dispositions du présent titre s'appliquent aux sociétés dont les titres sont admis aux négociations sur un marché
+réglementé et qui soit sont titulaires d'une licence d'exploitation de transporteur aérien délivrée en application de
+l'article L. 330-1, soit ont pour principale activité la prise de participations dans le capital d'entreprises de transport
+aérien et détiennent, directement ou indirectement, la majorité du capital et des droits de vote d'une société titulaire
+d'une telle licence.
+
 Les titres émis par les sociétés qui sont l'objet du présent titre prennent les formes prévues aux articles L. 228-1 et
 suivants du code de commerce, sous réserve des dispositions suivantes.
 
-Les statuts d'une société titulaire d'une licence d'exploitation de transporteur aérien délivrée en application de l'article
-L. 330-1 et dont les titres sont admis aux négociations sur un marché réglementé déterminent les conditions dans lesquelles
-la société impose la mise sous forme nominative des titres composant son capital. Cette obligation peut ne s'appliquer qu'aux
-actionnaires détenant une certaine fraction du capital ou des droits de vote. Les statuts prévoient une procédure
-d'identification des détenteurs de titres. Ils précisent les informations qui doivent être communiquées à la société par les
-détenteurs de titres sous forme nominative, afin de permettre à cette dernière de s'assurer du respect des règles et
-stipulations fixées par les règlements communautaires, les accords internationaux ou le présent titre, et notamment de celles
-relatives à la composition et à la répartition de son actionnariat ou à son contrôle effectif, au sens desdites règles et
-stipulations.
+Les statuts des sociétés objet du présent titre déterminent les conditions dans lesquelles la société impose la mise sous
+forme nominative des titres composant son capital. Cette obligation peut ne s'appliquer qu'aux actionnaires détenant une
+certaine fraction du capital ou des droits de vote. Les statuts prévoient une procédure d'identification des détenteurs de
+titres. Ils précisent les informations qui doivent être communiquées à la société par les détenteurs de titres sous forme
+nominative, afin de permettre à cette dernière de s'assurer du respect des règles et stipulations fixées par les règlements
+communautaires, les accords internationaux ou le présent titre, et notamment de celles relatives à la composition et à la
+répartition de son actionnariat ou à son contrôle effectif, au sens desdites règles et stipulations.
 
 Ces statuts peuvent prévoir que tout actionnaire soumis à l'obligation de mise sous forme nominative de ses titres qui n'a
 pas son domicile, au sens de l'article 102 du code civil, ou son siège sur le territoire français doit, pour l'application du
@@ -34,16 +38,28 @@ _Codifié par_:
 
   - Décret n°67-333 1967-03-30
 
-_Créé par_:
+_Modifié par_:
 
-  - Loi n°2003-322 du 9 avril 2003 - art. 1 () JORF 10 avril 2003
+  - Loi n°2004-734 2004-07-26 art. 1 I, II JORF 28 juillet 2004
+  - Loi n°2004-734 du 26 juillet 2004 - art. 1 () JORF 28 juillet 2004
+
+_Abrogé par_:
+
+  - Ordonnance n°2010-1307 du 28 octobre 2010 - art. 7
+
+_Nouveaux textes_:
+
+  - Code des transports - art. L6411-2 (V)
+  - Code des transports - art. L6411-3 (V)
+  - Code des transports - art. L6411-4 (V)
+  - Code des transports - art. L6411-5 (V)
 
 _Cite_:
 
-  - Code de commerce. - art. L228-1 (M)
-  - Code de commerce. - art. L228-23 (M)
-  - Code civil - art. 102 (V)
-  - Code de l'aviation civile - art. L330-1 (M)
+  - Code de commerce - art. L228-1
+  - Code de commerce - art. L228-23
+  - Code civil - art. 102
+  - Code de l'aviation civile - art. L330-1
 
 _Cité par_:
 
