--- a/01. Partie législative/Article L360-3 - 6844330.md
+++ b/01. Partie législative/Article L360-3 - 6844330.md
@@ -12,16 +12,24 @@ que dans ces conditions et sont privés des droits de vote qui y sont attachés.
 
 _Codifié par_:
 
-  - Décret n°67-333 1967-03-30
+  - Décret n°67-333 du 30 mars 1967
 
-_Créé par_:
+_Modifié par_:
 
-  - Loi n°2003-322 du 9 avril 2003 - art. 1 () JORF 10 avril 2003
+  - Loi n°2004-734 du 26 juillet 2004 - art. 1 () JORF 28 juillet 2004
+
+_Abrogé par_:
+
+  - Ordonnance n°2010-1307 du 28 octobre 2010 - art. 7
+
+_Nouveaux textes_:
+
+  - Code des transports - art. L6411-7 (V)
 
 _Cite_:
 
-  - Code monétaire et financier - art. L531-1 (V)
-  - Code de l'aviation civile - art. L360-2 (M)
+  - Code monétaire et financier - art. L531-1
+  - Code de l'aviation civile - art. L360-2
 
 _Cité par_:
 
