--- a/01. Partie législative/Article L360-4 - 6844332.md
+++ b/01. Partie législative/Article L360-4 - 6844332.md
@@ -29,15 +29,23 @@ _Codifié par_:
 
   - Décret n°67-333 1967-03-30
 
-_Créé par_:
+_Modifié par_:
 
-  - Loi n°2003-322 du 9 avril 2003 - art. 1 () JORF 10 avril 2003
+  - Loi n°2004-734 du 26 juillet 2004 - art. 1 () JORF 28 juillet 2004
+
+_Abrogé par_:
+
+  - Ordonnance n°2010-1307 du 28 octobre 2010 - art. 7
+
+_Nouveaux textes_:
+
+  - Code des transports - art. L6411-8 (V)
 
 _Cite_:
 
-  - Code de commerce L225-206 à L225-217, L225-210
-  - Code de commerce. - art. L225-210 (M)
-  - Code de l'aviation civile - art. L360-2 (M)
+  - Code de commerce
+  - Code de commerce - art. L225-210
+  - Code de l'aviation civile - art. L360-2
 
 _Cité par_:
 
