--- a/01. Partie législative/Article L423-1 - 6844362.md
+++ b/01. Partie législative/Article L423-1 - 6844362.md
@@ -1,52 +1,69 @@
 # Article L423-1
 
 L'engagement d'un membre du personnel navigant professionnel donne obligatoirement lieu à l'établissement d'un contrat de
-travail écrit.
+travail écrit. 
 
-Ce contrat précise, en particulier :
+Ce contrat précise, en particulier : 
 
-1° Le salaire minimum mensuel garanti ;
+1° Le salaire minimum mensuel garanti ; 
 
 2° L'indemnité de licenciement qui sera allouée, sauf en cas de faute grave, au personnel licencié sans droit à pension à
-jouissance immédiate ;
+jouissance immédiate ; 
 
-3° Les conditions dans lesquelles le contrat est résilié en cas de maladie, invalidité ou disparition ;
+3° Les conditions dans lesquelles le contrat est résilié en cas de maladie, invalidité ou disparition ; 
 
 4° Le lieu de destination final et le moment à partir duquel la mission est réputée accomplie si le contrat est conclu pour
-une mission déterminée ;
+une mission déterminée ; 
 
-5° Si le contrat prévoit l'expatriement du navigant :
+5° Si le contrat prévoit l'expatriement du navigant : 
 
 La durée du séjour hors de la métropole qui ne pourra pas excéder trois années consécutives, sauf accord entre les deux
-parties ;
+parties ; 
 
-L'indemnité de séjour ;
+L'indemnité de séjour ; 
 
-Les congés accordés en fin de séjour et les conditions de rapatriement.
+Les congés accordés en fin de séjour et les conditions de rapatriement. 
 
 En cas de licenciement, les intéressés auront droit, sauf demande de leur part, à être rapatriés avant l'expiration du
-préavis et aux frais de l'employeur ;
+préavis et aux frais de l'employeur ; 
 
 6° Le délai de préavis à observer en cas de résiliation du contrat par l'une ou l'autre des parties. Pendant le délai de
 préavis, le travail aérien mensuel demandé aux navigants doit rester égal à la moyenne de celui demandé pendant la même
-période aux membres du personnel navigant de l'entreprise considérée;
+période aux membres du personnel navigant de l'entreprise considérée ; 
 
-7° Le montant de l'indemnité exclusive de départ, allouée au personnel dont le contrat prend fin en application de l'article
-L. 421-9, à raison soit de l'impossibilité pour l'entreprise de proposer à l'intéressé de le reclasser dans un emploi au sol,
-soit du refus de l'intéressé d'accepter l'emploi qui lui est offert, calculé selon les mêmes modalités que celles prévues au
-deuxième alinéa de l'article L. 122-14-13 du code du travail.
+7° Le montant de l'indemnité exclusive de départ allouée au personnel dont le contrat prend fin en application de l'article
+L. 421-9. Ce montant est calculé comme suit :
+
+- moins de dix ans d'ancienneté : un dixième de mois de salaire par année d'ancienneté ;
+
+- à partir de dix ans d'ancienneté : un dixième de mois de salaire par année d'ancienneté plus un quinzième de mois de
+salaire par année d'ancienneté au-delà de dix ans. 
+
+Le salaire à prendre en considération pour le calcul de l'indemnité exclusive de départ est égal, selon la formule la plus
+avantageuse pour l'intéressé, soit au douzième de la rémunération des douze derniers mois précédant la date de départ, soit
+au tiers de la rémunération des trois derniers mois ; dans ce cas, toute prime ou gratification de caractère annuel ou
+exceptionnel qui aurait été versée au salarié pendant cette période ne serait prise en compte que dans la limite d'un montant
+calculé pro rata temporis. 
 
 L'employeur peut cependant ne pas utiliser le navigant en période de délai-préavis, mais dans ce cas il doit lui verser,
 immédiatement et en une seule fois, une indemnité calculée pour la durée minimum du préavis sur la base du salaire global
-mensuel moyen de la dernière année d'activité normale.
+mensuel moyen de la dernière année d'activité normale. 
 
 Sauf s'il s'agit d'assurer un service public, les navigants et le personnel complémentaire de bord ne peuvent être astreints
 à un travail aérien en zone d'hostilités civiles et militaires que s'ils sont volontaires. Un contrat particulier fixera
 alors les conditions spéciales du travail et devra couvrir expressément, en dehors des risques habituels, les risques
-particuliers dus aux conditions d'emploi.
+particuliers dus aux conditions d'emploi. 
 
 L'application des dispositions du présent article ne concerne que les rapports de l'employeur et du salarié. Elle ne met pas
 obstacle à l'exercice par les autorités publiques du droit de réquisition prévu par les lois en vigueur.
+
+**Nota:**
+
+Ordonnance n° 2010-1307 du 28 octobre 2010 article 9 : L'abrogation des dispositions mentionnées à l'article 7 ne prendra
+effet qu'à compter de la publication des dispositions réglementaires du code des transports pour ce qui concerne à l'article
+L. 423-1, au 5°, les mots " qui ne pourra pas excéder trois années consécutives, sauf accord entre les deux parties ", au
+premier alinéa du 7°, les mots " Ce montant est calculé comme suit ", les deuxième, troisième et quatrième alinéas du 7° et
+au cinquième alinéa du 7°, les mots " immédiatement et en une seule fois, ". (Fin de vigueur : date indéterminée).
 
 **Liens relatifs à cet article**
 
@@ -57,11 +74,7 @@ _Anciens textes_:
 
 _Codifié par_:
 
-  - Décret n°67-333 1967-03-30
-
-_Modifié par_:
-
-  - Loi n°95-116 du 4 février 1995 - art. 90 (V) JORF 5 février 1995
+  - Décret n°67-333 du 30 mars 1967
 
 _Cité par_:
 
@@ -69,7 +82,26 @@ _Cité par_:
   - Arrêté du 21 janvier 1998 - art. 3 (V)
   - Code de l'aviation civile - art. R423-1 (V)
 
+_Modifié par_:
+
+  - Loi n°2004-734 du 26 juillet 2004 - art. 4 () JORF 28 juillet 2004
+
+_Abrogé par_:
+
+  - Ordonnance n°2010-1307 du 28 octobre 2010 - art. 7
+
+_Nouveaux textes_:
+
+  - Code des transports - art. L6523-1 (V)
+  - Code des transports - art. L6523-2 (V)
+  - Code des transports - art. L6523-3 (V)
+  - Code des transports - art. L6523-4 (V)
+  - Code des transports - art. L6523-5 (V)
+  - Code des transports - art. L6523-6 (V)
+  - Code des transports - art. L6523-7 (V)
+  - Code des transports - art. L6523-8 (V)
+  - Code des transports - art. L6523-9 (V)
+
 _Cite_:
 
-  - Code du travail - art. L122-14-13 (M)
-  - Code de l'aviation civile - art. L421-9 (M)
+  - Code de l'aviation civile - art. L421-9 (VT)
