--- a/02. Partie réglementaire - Décrets en Conseil d'Etat/Article R133-9 - 6844526.md
+++ b/02. Partie réglementaire - Décrets en Conseil d'Etat/Article R133-9 - 6844526.md
@@ -1,7 +1,7 @@
 # Article R133-9
 
-Tout aéronef en circulation en quelque lieu qu'il se trouve doit se soumettre aux injonctions des services de police et de
-douane, sous quelque forme que ces injonctions lui soient données.
+Tout aéronef en circulation doit se soumettre aux injonctions des services de police et de douane ainsi que des aéronefs
+militaires intervenant sur demande de ces services au ministre chargé des armées.
 
 **Liens relatifs à cet article**
 
@@ -13,10 +13,10 @@ _Codifié par_:
 
   - Décret n°67-334 1967-03-30
 
+_Modifié par_:
+
+  - Décret n°2004-794 du 29 juillet 2004 - art. 3 () JORF 3 août 2004
+
 _Cité par_:
 
   - Code de l'aviation civile - art. R133-5 (M)
-
-_Modifié par_:
-
-  - Décret n°73-256 1973-03-06 art. 1 JORF 10 mars 1973
