--- a/02. Partie réglementaire - Décrets en Conseil d'Etat/Article R227-7 - 6844806.md
+++ b/02. Partie réglementaire - Décrets en Conseil d'Etat/Article R227-7 - 6844806.md
@@ -27,9 +27,9 @@ _Cité par_:
   - Décret n°2019-832 du 6 août 2019 - art. (V)
   - Code de l'environnement - art. Annexe I à l'article R123-1 (V)
 
-_Créé par_:
+_Modifié par_:
 
-  - Décret n°2004-558 du 15 juin 2004 - art. 1 () JORF 18 juin 2004
+  - Décret n°2004-1051 du 28 septembre 2004 - art. 1 () JORF 5 octobre 2004
 
 _Cite_:
 
