--- a/02. Partie réglementaire - Décrets en Conseil d'Etat/Article R227-7 - 6844806.md
+++ b/02. Partie réglementaire - Décrets en Conseil d'Etat/Article R227-7 - 6844806.md
@@ -26,9 +26,9 @@ _Cité par_:
   - Décret n°85-453 du 23 avril 1985 - art. Annexe (Ab)
   - Code de l'environnement - art. Annexe I à l'article R123-1 (VD)
 
-_Créé par_:
+_Modifié par_:
 
-  - Décret n°2004-558 du 15 juin 2004 - art. 1 () JORF 18 juin 2004
+  - Décret n°2004-1051 du 28 septembre 2004 - art. 1 () JORF 5 octobre 2004
 
 _Cite_:
 
