--- a/03. Partie réglementaire - Décrets simples/Article D242-8 - 6843830.md
+++ b/03. Partie réglementaire - Décrets simples/Article D242-8 - 6843830.md
@@ -1,24 +1,13 @@
 # Article D242-8
 
-Dans les mêmes zones et sous réserve des dispositions de l'article D. 242-10, l'établissement de plantations, remblais et
-obstacles de toute nature non soumis au permis de construire et ne relevant pas de la loi du 15 juin 1906 sur les
-distributions d'énergie est soumis à l'autorisation de l'ingénieur en chef du service des bases aériennes compétent.
+Par dérogation à l'article D. 242-7, le préfet peut autoriser, dans les mêmes zones, des installations et équipements
+concourant à la sécurité de la navigation aérienne et du transport aérien public, après avis préalable de la Commission
+centrale des servitudes aéronautiques et sous réserve qu'une étude technique démontre que la sécurité et la régularité de
+l'exploitation des aéronefs ne sont pas affectées.
 
-La demande est adressée au maire qui en délivre récépissé. Elle donne les précisions utiles sur la nature et l'emplacement
-des obstacles ainsi que les hauteurs qu'ils sont susceptibles d'atteindre.
-
-Le maire la transmet sans délai à l'ingénieur en chef.
+Cette autorisation, qui est annexée au plan de servitudes aéronautiques, est transmise au maire de la commune concernée.
 
 **Liens relatifs à cet article**
-
-_Cite_:
-
-  - Code de l'aviation civile - art. D242-10 (Ab)
-  - Loi n°1906-06-15
-
-_Anciens textes_:
-
-  - Décret n°60-1059 1960-09-24 art. 12
 
 _Codifié par_:
 
@@ -26,9 +15,18 @@ _Codifié par_:
 
 _Modifié par_:
 
-  - Décret n°80-910 1980-11-17 art. 5 JORF 21 novembre 1980
+  - Décret n°2004-1177 du 28 octobre 2004 - art. 2 () JORF 6 novembre 2004
 
 _Cité par_:
 
   - Décret n°2004-1177 du 28 octobre 2004 - art. 4 (V)
   - Décret n°2012-1495 du 27 décembre 2012 - art. 3 (V)
+  - Code de l'aviation civile - art. D242-10 (Ab)
+
+_Cite_:
+
+  - Code de l'aviation civile - art. D242-7 (M)
+
+_Anciens textes_:
+
+  - Décret n°60-1059 1960-09-24 art. 12
