--- a/02. Partie réglementaire - Décrets en Conseil d'Etat/Article R224-6 - 6844768.md
+++ b/02. Partie réglementaire - Décrets en Conseil d'Etat/Article R224-6 - 6844768.md
@@ -15,6 +15,10 @@ _Codifié par_:
 
   - Décret n°67-334 1967-03-30
 
+_Modifié par_:
+
+  - Décret n°2005-827 du 20 juillet 2005 - art. 2 () JORF 22 juillet 2005
+
 _Cite_:
 
   - Code de l'aviation civile - art. R221-8 (M)
