--- a/01. Partie législative/Article L722-1 - 6844431.md
+++ b/01. Partie législative/Article L722-1 - 6844431.md
@@ -17,10 +17,14 @@ _Codifié par_:
 
   - Décret n°67-333 1967-03-30
 
-_Créé par_:
+_Modifié par_:
 
-  - Loi n°99-243 du 29 mars 1999 - art. 1 () JORF 30 mars 1999
+  - Loi n°2006-10 du 5 janvier 2006 - art. 7 (V) JORF 6 janvier 2006
 
-**Liens**:
+_Abrogé par_:
 
-  - SPEC_APPLI: Loi n°99-243 du 29 mars 1999 - art. 2 (M)
+  - Ordonnance n°2010-1307 du 28 octobre 2010 - art. 7
+
+_Nouveaux textes_:
+
+  - Code des transports - art. L6222-7 (Ab)
