--- a/01. Partie législative/Article L711-1 - 6844409.md
+++ b/01. Partie législative/Article L711-1 - 6844409.md
@@ -43,14 +43,6 @@ _Codifié par_:
 
   - Décret n°67-333 1967-03-30
 
-_Créé par_:
-
-  - Loi n°99-243 du 29 mars 1999 - art. 1 () JORF 30 mars 1999
-
-**Liens**:
-
-  - SPEC_APPLI: Loi n°99-243 du 29 mars 1999 - art. 2 (M)
-
 _Cité par_:
 
   - Décret n°2005-1383 du 4 novembre 2005 - art. 7 (Ab)
@@ -61,3 +53,18 @@ _Cité par_:
   - Code de l'aviation civile - art. R731-2 (Ab)
   - Code de la défense. - art. L3125-2 (V)
   - Code de la défense. - art. R3125-4 (M)
+
+_Modifié par_:
+
+  - Loi n°2006-10 du 5 janvier 2006 - art. 7 (V) JORF 6 janvier 2006
+
+_Abrogé par_:
+
+  - Ordonnance n°2010-1307 du 28 octobre 2010 - art. 7
+
+_Nouveaux textes_:
+
+  - Code des transports - art. L1621-3 (VD)
+  - Code des transports - art. L6222-2 (V)
+  - Code des transports - art. L6222-3 (V)
+  - Code des transports - art. L6222-4 (Ab)
