--- a/01. Partie législative/Article L711-3 - 6844414.md
+++ b/01. Partie législative/Article L711-3 - 6844414.md
@@ -17,11 +17,7 @@ investigations sur le territoire national, lorsque leur participation est néces
 
 _Codifié par_:
 
-  - Décret n°67-333 1967-03-30
-
-_Modifié par_:
-
-  - Loi n°2002-3 du 3 janvier 2002 - art. 29 () JORF 4 janvier 2002
+  - Décret n°67-333 du 30 mars 1967
 
 _Cité par_:
 
@@ -31,6 +27,18 @@ _Cité par_:
   - Code de la défense. - art. L3125-2 (V)
   - Code de la défense. - art. R3125-25 (V)
 
+_Modifié par_:
+
+  - Loi n°2006-10 du 5 janvier 2006 - art. 7 (V) JORF 6 janvier 2006
+
+_Abrogé par_:
+
+  - Ordonnance n°2010-1307 du 28 octobre 2010 - art. 7
+
 _Cite_:
 
-  - Code de l'aviation civile - art. L721-1 (M)
+  - Code de l'aviation civile - art. L721-1
+
+_Nouveaux textes_:
+
+  - Code des transports - art. L1621-8 (VD)
