--- a/01. Partie législative/Article L721-6 - 6844428.md
+++ b/01. Partie législative/Article L721-6 - 6844428.md
@@ -13,7 +13,15 @@ _Codifié par_:
 
 _Modifié par_:
 
-  - Loi n°2002-3 du 3 janvier 2002 - art. 28 () JORF 4 janvier 2002
+  - Loi n°2006-10 du 5 janvier 2006 - art. 7 (V) JORF 6 janvier 2006
+
+_Abrogé par_:
+
+  - Ordonnance n°2010-1307 du 28 octobre 2010 - art. 7
+
+_Nouveaux textes_:
+
+  - Code des transports - art. L1621-15 (VD)
 
 _Cité par_:
 
