--- a/01. Partie législative/Article L723-1 - 6844435.md
+++ b/01. Partie législative/Article L723-1 - 6844435.md
@@ -9,20 +9,30 @@ personne qui en avait la garde.
 
 Lorsqu'une procédure judiciaire est ouverte, une copie du procès-verbal est adressée à l'autorité judiciaire.
 
+**Nota:**
+
+Ordonnance n° 2010-1307 du 28 octobre 2010 article 9 : L'abrogation des dispositions mentionnées à l'article 7 ne prendra
+effet qu'à compter de la publication des dispositions réglementaires du code des transports pour ce qui concerne le deuxième
+alinéa de l'article 723-1 (Fin de vigueur : date indéterminée).
+
 **Liens relatifs à cet article**
 
 _Codifié par_:
 
   - Décret n°67-333 1967-03-30
 
-_Créé par_:
+_Modifié par_:
 
-  - Loi n°99-243 du 29 mars 1999 - art. 1 () JORF 30 mars 1999
+  - Loi n°2006-10 du 5 janvier 2006 - art. 7 (V) JORF 6 janvier 2006
 
-**Liens**:
+_Abrogé par_:
 
-  - SPEC_APPLI: Loi n°99-243 du 29 mars 1999 - art. 2 (M)
+  - Ordonnance n°2010-1307 du 28 octobre 2010 - art. 7
+
+_Nouveaux textes_:
+
+  - Code des transports - art. L6222-6 (Ab)
 
 _Cite_:
 
-  - Code de l'aviation civile - art. L721-5 (M)
+  - Code de l'aviation civile - art. L721-5
