--- a/01. Partie législative/Article L731-1 - 6844438.md
+++ b/01. Partie législative/Article L731-1 - 6844438.md
@@ -20,14 +20,6 @@ _Codifié par_:
 
   - Décret n°67-333 1967-03-30
 
-_Créé par_:
-
-  - Loi n°99-243 du 29 mars 1999 - art. 1 () JORF 30 mars 1999
-
-**Liens**:
-
-  - SPEC_APPLI: Loi n°99-243 du 29 mars 1999 - art. 2 (M)
-
 _Cité par_:
 
   - Loi n°2003-495 du 12 juin 2003 - art. 40 (Ab)
@@ -35,6 +27,19 @@ _Cité par_:
   - Code de l'aviation civile - art. R731-1 (Ab)
   - Code de la défense. - art. L3125-2 (V)
 
+_Modifié par_:
+
+  - Loi n°2006-10 du 5 janvier 2006 - art. 7 (V) JORF 6 janvier 2006
+
+_Abrogé par_:
+
+  - Ordonnance n°2010-1307 du 28 octobre 2010 - art. 7
+
+_Nouveaux textes_:
+
+  - Code des transports - art. L1621-16 (VD)
+  - Code des transports - art. L1621-17 (VD)
+
 _Cite_:
 
-  - Code pénal - art. 226-13 (M)
+  - Code pénal - art. 226-13
